--- a/UoG Dissertation Project/fine_tuning.ipynb
+++ b/UoG Dissertation Project/fine_tuning.ipynb
@@ -59,7 +59,7 @@
     "    )\n",
     "\n",
     "# Model and Tokenizer Setup\n",
-    "access_token = \"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\" \n",
+    "access_token = \"Enter your hugging face token\" \n",
     "model_id = \"Equall/Saul-7B-Instruct-v1\" \n",
     "\n",
     "# Configure the model for 4-bit quantization for efficient memory usage\n",
