--- a/UoG Dissertation Project/prompting_using_dspy.ipynb
+++ b/UoG Dissertation Project/prompting_using_dspy.ipynb
@@ -54,7 +54,7 @@
     "    model_kwargs={\n",
     "        \"quantization_config\": quantization_config,  # Apply the quantization settings\n",
     "        \"device_map\": \"auto\",  # Automatically distribute model across available devices\n",
-    "        \"token\": \"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\"  # Access token for Hugging Face API\n",
+    "        \"token\": \"Enter your HF token\"  # Access token for Hugging Face API\n",
     "    }\n",
     ")\n",
     "\n",
