--- a/UoG Dissertation Project/inferencing.ipynb
+++ b/UoG Dissertation Project/inferencing.ipynb
@@ -76,7 +76,7 @@
     "    )\n",
     "\n",
     "# Initialize the Together API client with an API key.\n",
-    "tg.api_key = \"e018b13477986976a6c4ce9a189ca87d6bc97f0252c25df54b4673c791cf6c31\"\n",
+    "tg.api_key = \"Enter your Together API key\"\n",
     "tg.api_base = \"https://api.together.xyz/v1\"\n",
     "\n",
     "# Function to generate text using the Together API.\n",
